# TempleI

./: .gitignore  AGENTS.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/templei/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  templei_mux_stub.cpp  templei_srt_stub.cpp
app/src/main/java/com/example/templei/: MainActivity.kt  Screen1Activity.kt  Screen2Activity.kt  Screen3Activity.kt  Screen4Activity.kt
app/src/main/java/com/example/templei/feature/camera/: CameraFeature.kt
app/src/main/java/com/example/templei/feature/export/: AudioEncoderNode.kt  CaptureCoordinator.kt  ExportFeature.kt  ObsEndpointSpec.kt  SrtNativeBridge.kt  SrtTransportNode.kt  StreamSessionService.kt  StreamState.kt  TsMuxNativeBridge.kt  TsMuxerNode.kt  VideoEncoderNode.kt
app/src/main/java/com/example/templei/ui/components/: PulseButton.kt  UiPaletteBar.kt
app/src/main/java/com/example/templei/ui/navigation/: NavGraph.kt  Routes.kt  TopNavigation.kt
app/src/main/java/com/example/templei/ui/state/: HomeEvent.kt  (+1 more)
app/src/main/jniLibs/: README.md
app/src/main/res/layout/: activity_main.xml  activity_screen1.xml  activity_screen2.xml  activity_screen3.xml  activity_screen4.xml  view_top_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/templei/: ExampleUnitTest.kt
docs/: screen2-obs-streaming-plan.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-libsrt-android.sh
(+5 files in other folders)
